namespaces/live-1.cloud-platform.service.justice.gov.uk/prisoner-content-hub-development/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prisoner-content-hub-development
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "prisoner-content-hub"
    cloud-platform.justice.gov.uk/owner: "Prisoner Facing Services: thehub@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/digital-hub.git"
